--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </div>
       
 
-        <script type="module" src="./index.js"></script>
+        <script type="module" src="./src/App.js"></script>
         
     </body>
     </html>
